Fix technical issues: shared API config, barcode validation, date serialization, network timeouts

--- a/app.json
+++ b/app.json
@@ -1,21 +1,70 @@
 {
   "expo": {
-    "name": "vibecode",
-    "slug": "vibecode",
-    "scheme": "vibecode",
+    "name": "ClearLabel",
+    "slug": "clearlabel",
+    "scheme": "clearlabel",
     "version": "1.0.0",
     "orientation": "portrait",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
+    "icon": "./assets/images/icon.png",
+    "splash": {
+      "image": "./assets/images/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#0D9488"
+    },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.patrob316.clearlabel"
     },
     "android": {
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.patrob316.clearlabel",
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "backgroundColor": "#0D9488"
+      },
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO"
+      ]
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router",
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow ClearLabel to access your camera to scan product barcodes and ingredient labels."
+        }
+      ],
+      [
+        "expo-splash-screen",
+        {
+          "image": "./assets/images/splash.png",
+          "imageWidth": 200,
+          "backgroundColor": "#0D9488"
+        }
+      ],
+      "expo-asset",
+      "expo-video",
+      "expo-web-browser",
+      "react-native-edge-to-edge"
+    ],
+    "updates": {
+      "url": "https://u.expo.dev/31878629-293c-4c2f-827a-64c227421088"
+    },
+    "runtimeVersion": {
+      "policy": "sdkVersion"
+    },
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "31878629-293c-4c2f-827a-64c227421088"
+      },
+      "anthropicApiKey": "${EXPO_PUBLIC_VIBECODE_ANTHROPIC_API_KEY}"
+    },
+    "owner": "patrob316"
   }
 }
