Add ITSAppUsesNonExemptEncryption to skip export compliance

--- a/app.json
+++ b/app.json
@@ -14,7 +14,10 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.patrob316.clearlabel"
+      "bundleIdentifier": "com.patrob316.clearlabel",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "edgeToEdgeEnabled": true,
