UX improvements: Stats links, result screen info icons, on-demand alternatives
- Home screen stats cards now link to history with filters (safe/flagged)
- History screen has status filter buttons (All/Safe/Flagged)
- Result screen: Nutriscore info icon with educational modal
- Result screen: NOVA score info icon with processing levels explained
- Result screen: Allergens now tappable to show full list
- Healthier Alternatives now on-demand (like AI analysis)
- Alternatives include View Details + Shop buttons (Google Shopping)
- Improved alternatives search with better product type matching
- Better keyword extraction for finding similar products

--- a/app.json
+++ b/app.json
@@ -16,7 +16,10 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.patrob316.clearlabel",
       "infoPlist": {
-        "ITSAppUsesNonExemptEncryption": false
+        "ITSAppUsesNonExemptEncryption": false,
+        "NSCalendarsUsageDescription": "ClearLabel does not access your calendar. This permission is required by a third-party library.",
+        "NSContactsUsageDescription": "ClearLabel does not access your contacts. This permission is required by a third-party library.",
+        "NSLocationWhenInUseUsageDescription": "ClearLabel does not access your location. This permission is required by a third-party library."
       }
     },
     "android": {
@@ -50,7 +53,8 @@
       "expo-asset",
       "expo-video",
       "expo-web-browser",
-      "react-native-edge-to-edge"
+      "react-native-edge-to-edge",
+      "expo-build-properties"
     ],
     "updates": {
       "url": "https://u.expo.dev/31878629-293c-4c2f-827a-64c227421088"
