Add affiliate links system for healthier alternatives monetization
- New affiliateLinks service with hybrid model:
  - Amazon (locale-aware with per-country domains)
  - iHerb (global, prioritized for supplements)
  - Thrive Market (US only, prioritized for organic products)
- Shop modal shows all available options sorted by relevance
- Affiliate tags ready to add once approved (empty for now)
- Uses expo-localization to detect user country
- Automatic domain switching for international users

--- a/app.json
+++ b/app.json
@@ -54,7 +54,8 @@
       "expo-video",
       "expo-web-browser",
       "react-native-edge-to-edge",
-      "expo-build-properties"
+      "expo-build-properties",
+      "expo-localization"
     ],
     "updates": {
       "url": "https://u.expo.dev/31878629-293c-4c2f-827a-64c227421088"
