--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.4",
     "expo-live-photo": "~0.1.4",
+    "expo-localization": "~16.1.6",
     "expo-mail-composer": "~14.1.4",
     "expo-manifests": "~0.16.4",
     "expo-media-library": "~17.1.6",
